# rtc_practice

ROS/: Task.txt
ROS/ros_task/ros_task/ros_task/: CMakeLists.txt  package.xml
ROS/ros_task/ros_task/ros_task/src/: action_client.cpp  action_server.cpp  client.cpp  publisher.cpp  service.cpp  subscriber.cpp
ROS/ros_task2/ros_task2/: README.md
ROS/ros_task2/ros_task2/ros_action/: CMakeLists.txt  package.xml
ROS/ros_task2/ros_task2/ros_action/config/: action_server.yaml
ROS/ros_task2/ros_task2/ros_action/include/ros_action/: action_client.hpp  action_server.hpp
ROS/ros_task2/ros_task2/ros_action/launch/: action_server.launch.py
ROS/ros_task2/ros_task2/ros_action/src/: action_client.cpp  action_server.cpp
ROS/ros_task2/ros_task2/ros_interfaces/: CMakeLists.txt  package.xml
ROS/ros_task2/ros_task2/ros_interfaces/action/: Move.action
ROS/ros_task2/ros_task2/ros_interfaces/srv/: SleepSrv.srv
ROS/ros_task2/ros_task2/ros_service/: CMakeLists.txt  package.xml
ROS/ros_task2/ros_task2/ros_service/include/ros_service/: service.hpp
ROS/ros_task2/ros_task2/ros_service/src/: service.cpp
ROS/ros_task2/ros_task2/ros_topic/: CMakeLists.txt  package.xml
ROS/ros_task2/ros_task2/ros_topic/include/ros_topic/: publisher.hpp  subscriber.hpp
ROS/ros_task2/ros_task2/ros_topic/src/: publisher.cpp  subscriber.cpp
